name:                fun-with-servant
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/tomgi/fun-with-servant#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     App, Config, Db, Docs, RestClient, Schema, Server, Types
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , servant-server
                     , servant-pandoc
                     , pandoc
                     , servant-docs
                     , servant
                     , HTTP
                     , wai
                     , warp
                     , bytestring
                     , text
                     , http-types
                     , data-default
                     , persistent
                     , persistent-sqlite
                     , persistent-postgresql
                     , persistent-template
                     , monad-logger
  default-language:    Haskell2010

executable fun-with-servant-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fun-with-servant
  default-language:    Haskell2010

test-suite fun-with-servant-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , fun-with-servant
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/tomgi/fun-with-servant
